2005-09-05  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ instrument-notation.itely,
	advanced-notation.itely: minor tweaks.

	* input/test/script-chart.ly: add item padding.

2005-09-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/offset.cc: use math.h iso. <cmath>

	* scm/ps-to-png.scm (make-ps-images): use png16m again, for sake
	of IE users.

	* scm/framework-eps.scm (dump-stencils-as-EPSes): cleanup.
	(widen-left-stencil-edges): new function. Fix alignment problems
	with LaTeX includegraphics.

	* lily/text-interface.cc (interpret_markup): use abort().

2005-09-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/regression/tie-chord.ly (testLong): add a chord in 4ths

	* lily/tie.cc (get_configuration): update bezier shape as we
	change Y positions.
	(get_configuration): don't move large ties if we're outside of the
	staff.

2005-09-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-markup-commands.scm (strut): swap X and Y dims.
	
2005-09-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* .cvsignore: Add auto-generated configure files and then some.

2005-09-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/define-grobs.scm (DynamicLineSpanner): Add
	X-extent-callback.  Fixes hairpin-slur collision.

2005-08-31  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/advanced-notation.itely,
	basic-notation.itely: minor changes.

2005-08-31  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scm/framework-eps.scm (dump-stencils-as-EPSes): Insert a
	\linebreak between each .eps file if \betweenLilyPondSystem is
	undefined. 

	* Documentation/user/lilypond-book.itely (Integrating LaTeX and
	music): Document the \linebreak

	* Documentation/user/lilypond-book.itely,
	input/tutorial/lbook-latex-test.tex,
	Documentation/user/examples.itely: Remove \usepackage{graphics}

2005-08-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/aybabtu.pe.in (i): don't merge alphabet into aybabtu.

	* lily/ly-module.cc (make_stand_in_procs_weak): 1.6.4 and earlier