@@ -9,7 +9,6 @@
 #include <math.h>
 
 #include "accidental-placement.hh"
-#include "libc-extension.hh" 	// isinf
 #include "skyline.hh"
 #include "music.hh"
 #include "pitch.hh"
