@@ -10,7 +10,6 @@
 
 #include "break-align-interface.hh"
 
-#include "libc-extension.hh"	// isinf
 #include "pointer-group-interface.hh"
 #include "self-alignment-interface.hh"
 #include "side-position-interface.hh"
