@@ -1,3 +1,11 @@
+2005-09-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/general-scheme.cc: remove my_{isinf,isnan}.
+
+	* flower/include/real.hh: using std::{isnan,isinf}
+	
+	* VERSION (PATCH_LEVEL): release 2.7.9
+
 2005-09-05  Graham Percival  <gpermus@gmail.com>
 
 	* Documentation/user/ instrument-notation.itely,
